deploy/k8s/ssr/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: album-app-ssr-netpol
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: album-app-ssr
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
    ports:
    - protocol: TCP
      port: 4000
